# pdm_projekt

./: .gitignore  accumulate_data.py  custom_lstm_example.py  evaluate_dataset.py  evaluate_traindata.py  fix_result_files.py  keras_proof_of_concept.py  keras_split_lstm.py  lstm.py  plot.py  plot_poc.py  pyproject.toml  test.py  test_low_lvl.py  torch_current_model.py  torch_custom_lstm.py  torch_high_lvl_lstm.py  torch_lstm_experiment.py  torch_lstm_profiling.py  torch_tensor_benchmark.py
CMaps/: RUL_all.txt  split_lstm.py
documents/: Dokumentation.docx  PdM_PoC_Bericht.doc  PdM_PoC_Bericht.odt  Veränderung_des REference_Models (unfertig).docx  failed architectures
graphs/2d comparisons/: mean-peak val acc-bwd path time-max14s-point_legend.txt  mean-peak val acc-epoch backward time-max14s-point_legend.txt  mean-peak val acc-epoch forward time-max14s-point_legend.txt  mean-peak val acc-total epoch time-max14s-point_legend.txt  mean-peak val acc-total time-max14s-point_legend.txt  median-peak val acc-epoch backward time-max14s-point_legend.txt  median-peak val acc-fwd path time-max14s-point_legend.txt  (+4 more)
results/: functional_model2.txt  functional_model3.txt  sliced_model-10units-dropout.txt  sliced_model-3units-dropout.txt  sliced_model-8-4-lr005-dropout.txt  sliced_model-8one-4one-dropout.txt  sliced_model-test-halves-dropout.txt  sliced_model-test.txt  sliced_model-test2.txt  sliced_model1.txt  split_model.txt  split_model3.txt  split_model4.txt  split_model5.txt
results2/: functional_model.txt  split_model.txt  split_model2.txt  split_model3.txt
(+496 files in other folders)
