[tool.poetry]
name = "azure_ml"
version = "0.1.0"
description = "LSTM example from azure-ml"
authors = ["Benjamin-Philipp Roth <B.Roth@cluetec.de>"]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.3.3"
numpy = "^1.19"
sklearn = "^0.0"
matplotlib = "^3.4.3"
azureml = "^0.2.7"
keras = "^2.6.0"
tensorflow = "^2.6.0"
pydot = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
